--- a/css/text.css
+++ b/css/text.css
@@ -26,8 +26,7 @@ body {
 	color: white;
 	font-size: 20px;
 	/*被某人吐槽很丑的阴影*/
-	text-shadow: 0px 1px 0px rgba(163, 163, 163, 0.349),
-	1px 1px 0px rgba(160, 160, 160, 0.349);
+	text-shadow: 1px 1px 0px rgb(172, 172, 172);
 
 }
 a {
@@ -54,6 +53,7 @@ code {
 	background-color: rgb(71, 71, 71);
 	width: 1000px;
 	font-family: Arial, Helvetica, sans-serif;
+	text-shadow: 0px 0px 0px rgb(172, 172, 172);
 }
 img {
 	margin-top: 10px;
